--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -97,20 +97,48 @@
   padding: 0;
   border-radius: var(--border-radius);
   margin-left: 2rem;
+  position: relative;
 }
 
 .headerUserImage img {
   height: 3.5rem;
   width: 3.5rem;
   border-radius: var(--border-radius);
+}
 
+.headerUserImage > div {
+  position: absolute;
+  right: 0;
+  bottom: -3.5rem;
+  background: white;
+  padding: 0.5rem 1rem;
+  border: 0.1rem solid black;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.headerUserImage > div:hover {
+  color: blue;
+}
+
+.headerUserImage > div::before {
+  content: "";
+  position: absolute;
+  right: 1rem;
+  top: -.6rem;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 5px 10px 5px;
+  border-color: transparent transparent black transparent;
 }
 
 .headerLoginButton a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: .8rem;
+  padding: 0.8rem;
 }
 
 .headerProfileSettings ul li svg {
