--- a/src/components/Post/post.module.css
+++ b/src/components/Post/post.module.css
@@ -19,3 +19,53 @@
     display: flex;
     gap: 1rem;
 }
+
+.postHeaderUserName img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: .5rem;
+}
+
+.postBody {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    width: 100%;
+}
+
+.postBody p {
+    width: 50%;
+    border-right: .1rem solid black;
+    padding: 1rem;
+}
+
+.postBody img{
+    width: 50%;
+    border-radius: 1rem;
+}
+
+.postShare {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+
+.postShare svg {
+    transition: .3s;
+    cursor: pointer;
+}
+
+.postShare svg:hover {
+    transform: scale(105%);
+}
+
+.postShare svg:hover:nth-child(1) {
+    fill: orange;
+}
+.postShare svg:hover:nth-child(2) {
+    fill: blue;
+}
+.postShare svg:hover:nth-child(3) {
+    fill: red;
+}
